# Otus-Main-patterns-2025-06

./: .gitignore  CMakeLists.txt  Homework-explain.md  README.md  print_cmake_project_files.sh  project-hw-06-adatrer_files.txt
Otus-Main-patterns-2025-06/: CMakeLists.txt  Otus-Main-patterns-2025-06.cpp  Otus-Main-patterns-2025-06.h  README.md
Otus-Main-patterns-2025-06/.github/workflows/: ci.yml
Otus-Main-patterns-2025-06/include/: Circle.h  IShape.h  Rectangle.h
Otus-Main-patterns-2025-06/src/: Circle.cpp  Rectangle.cpp  main.cpp
Otus-Main-patterns-2025-06/tests/: CMakeLists.txt  CircleTests.cpp  RectangleTests.cpp
common/: CMakeLists.txt
common/include/: IGameObject.hpp
httplib-wrapper/: CMakeLists.txt  README.md
httplib-wrapper/include/jwt-cpp/: jwt.h
hw-01-square-equation-solver/: CMakeLists.txt  README.md
hw-01-square-equation-solver/include/: MathSettings.h  SquareEquationSolver.h
hw-01-square-equation-solver/src/: SquareEquationSolver.cpp  main.cpp
hw-01-square-equation-solver/tests/: CMakeLists.txt  SquareEquationSolverTests.cpp
hw-02-abstractions/: .gitignore  CMakeLists.txt  README.md  main.cpp
hw-02-abstractions/include/: IMovable.hpp  IRotatable.hpp  MoveCommand.hpp  PhotonTorpedo.hpp  RotatableAdapter.hpp
hw-02-abstractions/src/: MovableAdapter.cpp  MoveCommand.cpp  PhotonTorpedo.cpp  RotatableAdapter.cpp  SpaceShip.cpp
hw-02-abstractions/tests/: TestAdapters.cpp  TestGameObjects.cpp  TestMoveCommand.cpp  TestRotateCommand.cpp  TestVector2D.cpp
hw-03-solid-and-exceptions/: CMakeLists.txt  README.md  Result.md
hw-03-solid-and-exceptions/demo/: main.cpp
hw-03-solid-and-exceptions/include/: CommandQueue.hpp  DoubleRetryCommand.hpp  ExceptionHandlers.hpp  IExceptionHandler.hpp  LogCommand.hpp  RetryCommand.hpp  TestCommands.hpp
hw-03-solid-and-exceptions/src/: CommandQueue.cpp  DoubleRetryCommand.cpp  ExceptionHandlers.cpp  LogCommand.cpp  RetryCommand.cpp  TestCommands.cpp
hw-03-solid-and-exceptions/tests/: test_CommandQueue.cpp  test_ExceptionHandlers.cpp  test_LogCommand.cpp  test_RetryCommand.cpp
hw-05-ioc/: CMakeLists.txt  README.md
hw-05-ioc/demo/: main.cpp
hw-05-ioc/docs/: IoC-readme-Cpp17.md
hw-05-ioc/include/: Commands.hpp  IoC.hpp  IocContainer.hpp  Scope.hpp  TestClasses.hpp
hw-05-ioc/src/: Commands.cpp  IocContainer.cpp  Scope.cpp  TestClasses.cpp
hw-05-ioc/tests/: BasicIoCTests.cpp  MultithreadingTests.cpp  ScopeTests.cpp
hw-06-adapter/: CMakeLists.txt  CMakeLists_OLD.txt  README.md  hw-06-adapter-report.md  main.cpp
hw-06-adapter/adapter-generator/: CMakeLists.txt  main.cpp
hw-06-adapter/adapter-generator/tests/: TestAdapterCodeGenerator.cpp  TestCustomImplementation.cpp  TestFileUtils.cpp  TestIntegration.cpp  TestMethodInfo.cpp  TestSimpleInterfaceParser.cpp
hw-06-adapter/docs/: adapter-generator-example.md  konspekt-adapter-generation.md
hw-06-adapter/examples/interfaces/: IRotatable.hpp
hw-06-adapter/include/adapters/: IMovable.hpp
hw-06-adapter/include/custom_implementations/: MovableImplementations.hpp
hw-06-adapter/include/interfaces/: CommandGetter.hpp  CommandSetter.hpp  DefaultGetterSetterRegistry.hpp  IGameObject.hpp  IMovable.hpp  Vector2D.hpp
hw-06-adapter/src/: CommandGetter.cpp  CommandSetter.cpp
hw-06-adapter/tests/: CommandGetterTest.cpp  CommandSetterTest.cpp  Integration_IoC_CommandTest.cpp  MovableAdapterIntegrationTest.cpp  TestDefaultGetterSetterRegistry.cpp
hw-07-multithreading/: CMakeLists.txt  Report.md
hw-07-multithreading/include/: CommandExecutor.hpp  HardStopCommand.hpp  ICommand.hpp  LegacyThreadSafeQueue.hpp  SoftStopCommand.hpp  StartCommand.hpp  ThreadSafeQueue.hpp
hw-07-multithreading/src/: CommandExecutor.cpp  HardStopCommand.cpp  LegacyThreadSafeQueue.cpp  SoftStopCommand.cpp  StartCommand.cpp  ThreadSafeQueue.cpp
hw-07-multithreading/tests/: CommandExecutorTest.cpp  ThreadCommandsTest.cpp
hw-08-message-exchange/: CMakeLists.txt  Report.md  main.cpp
hw-08-message-exchange/docs/: hw-08-message-exchange-task.md
hw-08-message-exchange/include/: InterpretCommand.hpp  TestCommand.hpp  game_manager.hpp
hw-08-message-exchange/server/: main.cpp
hw-08-message-exchange/src/: InterpretCommand.cpp  game_manager.cpp
hw-08-message-exchange/tests/: server_test.cpp
hw-10-auth/: CMakeLists.txt  Report.md
hw-10-auth/auth-service/include/: AuthApplication.hpp  AuthController.hpp  GameRegistry.hpp
hw-10-auth/auth-service/server/: main.cpp
hw-10-auth/auth-service/src/: AuthController.cpp  GameRegistry.cpp
hw-10-auth/battle-service/include/: BattleApplication.hpp  BattleController.hpp  CommandBuilders.hpp  Commands.hpp  ICommandBuilder.hpp
hw-10-auth/battle-service/server/: main.cpp
hw-10-auth/battle-service/src/: BattleController.cpp
hw-10-auth/common/: Application.hpp
hw-10-auth/common/include/: Application.hpp
hw-10-auth/jwt-lib/include/: IJWTGenerator.hpp  IJWTVerifier.hpp  JWTException.hpp  JWTPayload.hpp  RSAJWTGenerator.hpp  RSAJWTVerifier.hpp
hw-10-auth/jwt-lib/src/: JWTPayload.cpp  RSAJWTGenerator.cpp  RSAJWTVerifier.cpp
hw-10-auth/tests/: auth_service_test.cpp  battle_controller_test.cpp  game_registry_test.cpp  integration_test.cpp  jwt_lib_test.cpp
hw-10-auth/tests/keys/: private_key.pem  public_key.pem
hw-11-state/: CMakeLists.txt  Report.md
hw-11-state/include/: CommandExecutor.hpp  HardStopCommand.hpp  IExecutorState.hpp  MoveToCommand.hpp  MoveToState.hpp  NormalState.hpp  RunCommand.hpp  StateChangeCommand.hpp
hw-11-state/src/: CommandExecutor.cpp  HardStopCommand.cpp  MoveToCommand.cpp  MoveToState.cpp  NormalState.cpp  RunCommand.cpp  StateChangeCommand.cpp
hw-11-state/tests/: ExecutorStateTest.cpp  StateCommandsTest.cpp
hw-14-final-project/microservice-core/: CMakeLists.txt
hw-14-final-project/microservice-core/include/: IRequest.hpp  IWebApplication.hpp  RouteMatcher.hpp  ServerConfig.hpp  SimpleResponse.hpp  (+1 more)
hw-14-final-project/redirect-service/: CMakeLists.txt  Dockerfile  config.json  main.cpp
hw-14-final-project/rule-service/: CMakeLists.txt  Dockerfile  config.json  init.sql  main.cpp
(+170 files in other folders)
